[gd_scene load_steps=9 format=2]

[ext_resource path="res://objects/Drop.gd" type="Script" id=1]
[ext_resource path="res://assets/visuals/drops.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 12 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24, 24 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 15, 9 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 18, 18 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 24, 20 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 24, 24 )

[node name="Drop" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
hframes = 25

[node name="CollisionShape2D_SmallHealth" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )
disabled = true

[node name="CollisionShape2D_BigHealth" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )
disabled = true

[node name="CollisionShape2D_SmallPURefill" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 3 )
disabled = true

[node name="CollisionShape2D_BigPURefill" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 4 )
disabled = true

[node name="CollisionShape2D_ExtraLife" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 4 )
shape = SubResource( 5 )
disabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2

[node name="Area2D_PlayerDetection" type="Area2D" parent="."]
editor/display_folded = true
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_PlayerDetection"]
visible = false
shape = SubResource( 6 )
[connection signal="timeout" from="Timer" to="." method="_toggle"]
[connection signal="body_entered" from="Area2D_PlayerDetection" to="." method="_playerTouched"]
